# Nebula-Aura

./: Cargo.toml  README.md
.github/workflows/: main.yml
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  package-source.sh
src/: dsp.rs  editor.rs  lib.rs  preset.rs
tests/: audio_eval.rs
